--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
    */
   const PAGES = [
     {
+      id: "tec3",
+      title: "TEC-03 — Aplicativo para administración de licencias",
+      desc: "Mejorar el uso de las licencias del CDE",
+      file: "A3 BIM Lean_Tec-3_Aplicativo para administración de licencias_VF.html"
+    },  
+    {
       id: "tec4",
       title: "TEC-04 — Automatizar el modelado 3D de redes",
       desc: "Automatizar el modelado 3D de redes MT/BT aéreas (rural/urbano) ",
