--- a/index.html
+++ b/index.html
@@ -112,12 +112,18 @@
       desc: "Automatizar el modelado 3D de redes MT/BT aéreas (rural/urbano) ",
       file: "A3 BIM Lean_Tec-4_Automatización Modelado de Redes_VF.html"
     },
-
     {
       id: "tec5",
       title: "TEC-05 — Dashboard seguimiento de proyectos",
       desc: "Desarrollo de Dashboard para seguimiento de proyectos con el CDE",
       file: "A3 BIM Lean_Tec-5_Dashboard Seguimiento Proyectos_VF.html"
+    },
+    {
+      id: "tec6",
+      title: "TEC-06 — Gemelos Digitales en SET",
+      desc: "Escalar el Gemelo Digital a las SET con modelos 3d en las empresas del grupo
+        ",
+      file: "A3 BIM Lean_Tec-6_Gemelos Digitales en SET_VF.html"
     },
     {
       id: "tec7",
