--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
     {
       id: "tec6",
       title: "TEC-06 — Gemelos Digitales en SET",
-      desc: "Escalar el Gemelo Digital a las SET con modelos 3d en las empresas del grupo
-        ",
+      desc: "Escalar el Gemelo Digital a las SET con modelos 3d en las empresas del grupo",
       file: "A3 BIM Lean_Tec-6_Gemelos Digitales en SET_VF.html"
     },
     {
