--- a/A3 BIM Lean_Tec-3_Aplicativo para administración de licencias_VF.html
+++ b/A3 BIM Lean_Tec-3_Aplicativo para administración de licencias_VF.html
@@ -325,7 +325,7 @@
             <h3><span class="ico">🧩</span>Supuestos y restricciones</h3>
             <ul>
               <li>Ejecución masiva siempre en <b>lotes de 50</b> con cola, reintentos y bitácora.</li>
-              <li><b>SoD / 4 ojos:</b> solicitante ≠ aprobador ≠ ejecutor (operación segura).</li>
+              <li><b>SoD / 2 personas:</b> solicitante ≠ aprobador ≠ ejecutor (operación segura).</li>
               <li>Inactividad se define por <b>señales ACC</b> (Issues/Reviews), no por login exacto.</li>
               <li>Asociación a contrato depende de carpeta contractual y naming estándar en Docs.</li>
             </ul>
