--- a/index.html
+++ b/index.html
@@ -101,6 +101,36 @@
    */
   const PAGES = [
     {
+      id: "per2",
+      title: "PER-02 — Capacitación PMI + BIM",
+      desc: "Gestión de Proyectos (PMBOK 7 + portafolios + PMO) e introducir BIM aplicado a gestión de la información",
+      file: "A3 BIM Lean_Per-2_Capacitación PMI+BIM_VF.html"
+    },
+    {
+      id: "per4",
+      title: "PER-04 — Aula Virtual BIM",
+      desc: "Formación de personal interno y externo en la ejecución de proyectos BIM",
+      file: "A3 BIM Lean_Per-4_Aula virtual BIM_VF.html"
+    },
+    {
+      id: "est5",
+      title: "EST-05 — Campaña de difusión de metas y resultados",
+      desc: "Diseñar y ejecutar una campaña mixta para difundir metas, avances y resultados BIM ",
+      file: "A3 BIM Lean_Est-5_Campaña de difusión de metas y resultados_VF.html"
+    },
+    {
+      id: "est8",
+      title: "EST-08 — CONEBIM",
+      desc: "3ra edición del evento que posiciona a Distriluz como referente en BIM",
+      file: "A3 BIM Lean_Est-8_CONEBIM_VF.html"
+    },
+    {
+      id: "pro4",
+      title: "PRO-04 — Actualización de librería de armados",
+      desc: "Actualizar la librería de armados con calidad y estandarización",
+      file: "A3 BIM Lean_Pro-4_Actualización de librería de armados_VF.html"
+    },
+    {
       id: "tec3",
       title: "TEC-03 — Aplicativo para administración de licencias",
       desc: "Mejorar el uso de las licencias del CDE",
@@ -120,8 +150,8 @@
     },
     {
       id: "tec6",
-      title: "TEC-06 — Gemelos Digitales en SET",
-      desc: "Escalar el Gemelo Digital a las SET con modelos 3d en las empresas del grupo",
+      title: "TEC-06 — Gemelos digitales en SET",
+      desc: "Escalar piloto de gemelo digital a todas las SET con modelos 3d",
       file: "A3 BIM Lean_Tec-6_Gemelos Digitales en SET_VF.html"
     },
     {
