--- a/A3 BIM Lean_Tec-7_Integración CDE y GIS_VF.html
+++ b/A3 BIM Lean_Tec-7_Integración CDE y GIS_VF.html
@@ -4,226 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>A3 Lean BIM — TEC-7</title>
-  <style>
-    :root{
-      --ink:#111;
-      --muted:#555;
-      --line:#1d1d1d;
-      --soft:#e9e9e9;
-      --p:#f6fbff;
-      --d:#fff7f0;
-      --ca:#f7fff6;
-      --chip:#f2f2f2;
-      --ok:#1a7f37;
-      --warn:#b54708;
-      --bad:#b42318;
-      --font: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
-
-    /* Responsive layout (screen) */
-    html, body { height: 100%; }
-    body{
-      font-family: var(--font);
-      color: var(--ink);
-      margin:0;
-      background:#fff;
-      /* En portal con iframe: evitamos scroll global y usamos scroll por columna */
-      overflow:hidden;
-    }
-
-    .sheet{
-      width: 100%;
-      max-width: none;
-      height: 100%;
-      min-height: 100vh;
-      box-sizing: border-box;
-      padding: 18px;
-      margin: 0;
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-    }
-
-    .topbar{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      align-items:flex-start;
-      gap:16px;
-      border:2px solid var(--line);
-      padding:14px;
-      border-radius:16px;
-    }
-
-    .brand{ display:flex; flex-direction:column; gap:8px; min-width:0; }
-    .title{ font-size:18pt; font-weight:800; line-height:1.05; }
-    .subtitle{ font-size:10pt; color:var(--muted); line-height:1.25; }
-
-    .meta{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:10px 16px;
-      width:100%;
-      justify-self:stretch;
-      align-self:start;
-    }
-
-    .kv{ display:flex; gap:8px; align-items:baseline; white-space:nowrap; }
-    .k{ font-size:9pt; color:var(--muted); font-weight:700; }
-    .v{ font-size:10pt; font-weight:700; }
-
-    .chips{ display:flex; flex-wrap:wrap; gap:8px; margin-top:6px; }
-    .chip{
-      padding:6px 10px;
-      border:1px solid var(--soft);
-      background:var(--chip);
-      border-radius:999px;
-      font-size:8.5pt;
-      color:#333;
-      font-weight:700;
-    }
-
-    .grid{
-      display:grid;
-      grid-template-columns: 1fr 1fr 1fr; /* PLAN | DO | ACT */
-      gap:16px;
-      flex:1;
-      min-height:0;
-      align-items:stretch;
-    }
-
-    @media (max-width: 1100px){
-      .grid{ grid-template-columns: 1fr; }
-      .topbar{ grid-template-columns: 1fr; }
-      .meta{ grid-template-columns: 1fr 1fr; }
-    }
-
-    .col{
-      border:2px solid var(--line);
-      border-radius:16px;
-      display:flex;
-      flex-direction:column;
-      overflow:hidden;
-      min-height:0;
-    }
-
-    .colhead{
-      padding:12px 14px;
-      font-weight:900;
-      letter-spacing:.3px;
-      border-bottom:2px solid var(--line);
-      font-size:12pt;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-    }
-
-    .plan .colhead{ background: var(--p); }
-    .do .colhead{ background: var(--d); }
-    .act .colhead{ background: var(--ca); }
-
-    .sections{
-      padding:12px 14px;
-      display:flex;
-      flex-direction:column;
-      gap:12px;
-      overflow:auto;      /* scroll dentro de cada columna */
-      min-height:0;
-      flex:1;
-    }
-
-    /* Scrollbars visibles */
-    .sections{ scrollbar-width: thin; scrollbar-color: rgba(17,17,17,.35) rgba(0,0,0,.06); }
-    .sections::-webkit-scrollbar{ width: 10px; }
-    .sections::-webkit-scrollbar-track{ background: rgba(0,0,0,.05); border-radius: 999px; }
-    .sections::-webkit-scrollbar-thumb{ background: rgba(17,17,17,.30); border-radius: 999px; border: 2px solid rgba(0,0,0,.05); }
-    .sections::-webkit-scrollbar-thumb:hover{ background: rgba(17,17,17,.45); }
-
-    .sec{
-      border:1px solid var(--soft);
-      border-radius:14px;
-      padding:10px 12px;
-      background:#fff;
-    }
-
-    .sec h3{
-      margin:0 0 8px 0;
-      font-size:10pt;
-      font-weight:900;
-      display:flex;
-      align-items:flex-start;
-      gap:8px;
-    }
-
-    .sec h3 .ico{ width:18px; display:inline-flex; justify-content:center; line-height:1; }
-
-    .sec p, .sec li{ margin:0; font-size:9pt; line-height:1.25; color:#1b1b1b; }
-    .sec ul{ margin:0; padding-left: 18px; }
-
-    table.tbl{ width:100%; border-collapse:collapse; font-size:8.6pt; line-height:1.2; }
-    .tbl th, .tbl td{ border:1px solid var(--soft); padding:6px 7px; vertical-align:top; }
-    .tbl th{ background:#fafafa; font-weight:900; }
-    .tbl .w-hito{ width:64px; }
-    .tbl .w-fecha{ width:170px; white-space:nowrap; }
-
-    .hint{ color: var(--muted); font-weight:600; }
-
-    /* Riesgos (sin traslape) */
-    .riskrow{ display:flex; gap:12px; align-items:flex-start; margin-bottom:10px; }
-    .riskrow > div:last-child{ min-width:0; }
-    .badge{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding:6px 10px;
-      border-radius:999px;
-      font-size:8pt;
-      font-weight:900;
-      border:1px solid var(--soft);
-      width:56px;
-      flex: 0 0 56px;
-      line-height: 1;
-    }
-    .b-green{ background:#e9f9ee; color:var(--ok); border-color:#bfe9c9; }
-    .b-amber{ background:#fff3e6; color:var(--warn); border-color:#ffd7b0; }
-    .b-red{ background:#ffe9e7; color:var(--bad); border-color:#ffc6c0; }
-
-    [contenteditable="true"]:focus{
-      outline: 2px dashed #3b82f6;
-      outline-offset: 2px;
-      border-radius: 10px;
-    }
-
-    .printnote{
-      margin-top:2px;
-      font-size:8pt;
-      color:var(--muted);
-      display:flex;
-      justify-content:space-between;
-      gap:16px;
-    }
-
-    @media print{
-      /* A3 landscape only for printing */
-      @page { size: A3 landscape; margin: 10mm; }
-      html, body{ height:auto; }
-      body{ background:#fff; overflow:visible; }
-      .sheet{
-        width: 420mm;
-        height: 297mm;
-        max-width: none;
-        min-height: auto;
-        padding: 10mm;
-        margin:0;
-        gap:6mm;
-      }
-      .topbar{ gap:10mm; padding:6mm; border-radius:6mm; }
-      .grid{ grid-template-columns: 1fr 1fr 1fr; gap:6mm; }
-      .col{ border-radius:6mm; }
-      .colhead{ padding:4mm 5mm; }
-      .sections{ overflow: visible; padding:4mm 5mm; }
-      .sec{ border-radius:4mm; padding:3mm 3.5mm; }
-    }
-  </style>
+  <link rel="stylesheet" href="a3-bim-lean.css" />
 </head>
 
 <body>
