--- a/index.html
+++ b/index.html
@@ -4,58 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Portal A3 BIM Lean</title>
-  <style>
-    :root{
-      --bg:#0b0f14; --panel:#111826; --muted:#9aa4b2; --text:#e6eaf0; --line:#1f2a3a;
-      --accent:#5eead4;
-    }
-    *{box-sizing:border-box}
-    body{margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; background:var(--bg); color:var(--text);}
-    .app{display:grid; grid-template-columns: 340px 1fr; height:100vh;}
-    aside{border-right:1px solid var(--line); background:linear-gradient(180deg,var(--panel),#0b0f14);}
-    header{padding:14px 14px 10px; border-bottom:1px solid var(--line);}
-    .brand{display:flex; align-items:center; gap:10px; font-weight:800; letter-spacing:.2px;}
-    .dot{width:10px;height:10px;border-radius:999px;background:var(--accent); box-shadow:0 0 20px rgba(94,234,212,.35);}
-    .sub{color:var(--muted); font-size:12px; margin-top:4px; line-height:1.3;}
-
-    .search{padding:10px 14px; border-bottom:1px solid var(--line);}
-    input{
-      width:100%; padding:10px 12px; border-radius:10px; border:1px solid var(--line);
-      background:#0b1220; color:var(--text); outline:none;
-    }
-    input:focus{border-color:rgba(94,234,212,.55); box-shadow:0 0 0 3px rgba(94,234,212,.12);}
-
-    .list{padding:10px 8px; overflow:auto; height:calc(100vh - 126px);}
-    .item{
-      display:flex; flex-direction:column; gap:2px;
-      padding:10px 10px; margin:4px 6px; border-radius:12px; cursor:pointer;
-      border:1px solid transparent;
-    }
-    .item:hover{background:rgba(255,255,255,.03); border-color:rgba(255,255,255,.05);}
-    .item.active{background:rgba(94,234,212,.08); border-color:rgba(94,234,212,.25);}
-    .item .t{font-weight:700; font-size:13px;}
-    .item .d{color:var(--muted); font-size:12px; line-height:1.25;}
-    .item .id{color:rgba(94,234,212,.8); font-size:11px; margin-top:2px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
-
-    main{display:flex; flex-direction:column; min-width:0;}
-    .topbar{
-      display:flex; align-items:center; justify-content:space-between; gap:10px;
-      padding:10px 12px; border-bottom:1px solid var(--line); background:rgba(255,255,255,.02);
-    }
-    .crumb{color:var(--muted); font-size:12px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
-    .hint{color:var(--muted); font-size:12px;}
-    .hint code{color:rgba(94,234,212,.85);}
-
-    .btn{
-      padding:8px 10px; border-radius:10px; border:1px solid var(--line);
-      background:#0b1220; color:var(--text); cursor:pointer; font-size:12px;
-    }
-    .btn:hover{border-color:rgba(94,234,212,.35);}
-    .btn:active{transform: translateY(1px);}
-
-    iframe{border:0; width:100%; height:100%; background:white; display:block; transform-origin:0 0;}
-    .framewrap{flex:1; min-height:0; overflow:auto; background:#ffffff;}
-</style>
+  <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
