Update A3 BIM Lean_Est-5_Campaña de difusión de metas y resultados_VF.html

--- a/A3 BIM Lean_Est-5_Campaña de difusión de metas y resultados_VF.html
+++ b/A3 BIM Lean_Est-5_Campaña de difusión de metas y resultados_VF.html
@@ -155,22 +155,27 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><b>Alcance</b></td>
+                  <td><b>Definición de alcance</b></td>
                   <td>Tema central, narrativa, canales, reglas de publicación, voceros y SLA de aprobación.</td>
                   <td class="w-fecha">26-01-26 → 26-02-13</td>
                 </tr>
                 <tr>
-                  <td><b>TDR</b></td>
+                  <td><b>Elaboración TDR</b></td>
                   <td>Requerimientos, entregables, criterios de evaluación, SLAs y formatos editables.</td>
                   <td class="w-fecha">26-02-16 → 26-02-27</td>
                 </tr>
                 <tr>
-                  <td><b>Contratación</b></td>
+                  <td><b>REcopilación de información</b></td>
+                  <td>Identificación y solicitud de información para el desarrollo de servicio (BIM y JCCRS).</td>
+                  <td class="w-fecha">26-03-02 → 26-03-27</td>
+                </tr>
+                <tr>
+                  <td><b>Proceso de contratación</b></td>
                   <td>Adjudicación del servicio.</td>
                   <td class="w-fecha">26-03-02 → 26-03-27</td>
                 </tr>
                 <tr>
-                  <td><b>Sprint</b></td>
+                  <td><b>Ejecución contractual</b></td>
                   <td><b>4 semanas</b>: lanzamiento + 3 oleadas + reporte KPI + handover a Comunicaciones.</td>
                   <td class="w-fecha"><b>26-03-30 → 26-04-24</b></td>
                 </tr>
