--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
       title: "TEC-08 — Gestión Inteligente de Proyectos",
       desc: "Desarrollo de Agente IA para la gestión inteligente de proyectos",
       file: "A3 BIM Lean_Tec-8_Gestión Inteligente de Proyectos_VF.html"
+    },
+    {
+    id: "gantt",
+    title: "Gantt — PIB 2026",
+    desc: "Cronograma (semanal/mensual) con filtros y línea de hoy",
+    file: "gantt.html"
     }
   ];
 
