--- a/gantt.html
+++ b/gantt.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gantt PIB 2026</title>
-  <link rel="stylesheet" href="assets/gantt.css" />
+  <link rel="stylesheet" href="gantt.css" />
 </head>
 
 <body>
